tests/ui/consts/const-block-const-bound.stderr
error[E0277]: the trait bound `UnconstDrop: const Destruct` is not satisfied
  --> $DIR/const-block-const-bound.rs:16:11
   |
LL |         f(UnconstDrop);
   |         - ^^^^^^^^^^^
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `f`
  --> $DIR/const-block-const-bound.rs:6:15
   |
LL | const fn f<T: [const] Destruct>(x: T) {}
   |               ^^^^^^^^^^^^^^^^ required by this bound in `f`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
